@@ -28,7 +28,7 @@ func init() {
 // multiple fetch calls.
 type MetricSet struct {
 	mb.BaseMetricSet
-	mongoSession *mgo.Session
+	dialInfo *mgo.DialInfo
 }
 
 // New creates a new instance of the MetricSet
@@ -43,15 +43,9 @@ func New(base mb.BaseMetricSet) (mb.MetricSet, error) {
 	}
 	dialInfo.Timeout = base.Module().Config().Timeout
 
-	// instantiate direct connections to each of the configured Mongo hosts
-	mongoSession, err := mongodb.NewDirectSession(dialInfo)
-	if err != nil {
-		return nil, err
-	}
-
 	return &MetricSet{
 		BaseMetricSet: base,
-		mongoSession:  mongoSession,
+		dialInfo:      dialInfo,
 	}, nil
 }
 
@@ -62,8 +56,14 @@ func (m *MetricSet) Fetch() ([]common.MapStr, error) {
 	// events is the list of events collected from each of the databases.
 	var events []common.MapStr
 
+	// instantiate direct connections to each of the configured Mongo hosts
+	mongoSession, err := mongodb.NewDirectSession(m.dialInfo)
+	if err != nil {
+		return nil, err
+	}
+
 	// Get the list of databases names, which we'll use to call db.stats() on each
-	dbNames, err := m.mongoSession.DatabaseNames()
+	dbNames, err := mongoSession.DatabaseNames()
 	if err != nil {
 		logp.Err("Error retrieving database names from Mongo instance")
 		return events, err
@@ -71,7 +71,7 @@ func (m *MetricSet) Fetch() ([]common.MapStr, error) {
 
 	// for each database, call db.stats() and append to events
 	for _, dbName := range dbNames {
-		db := m.mongoSession.DB(dbName)
+		db := mongoSession.DB(dbName)
 
 		result := common.MapStr{}
 
